[tool.poetry]
name = "deck-me-this"
version = "0.0.1"
description = ""
authors = ["Einenlum <yann.rabiller@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
